Corregir descarga mediante enlace directo
